5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1789_1620.log
== TEST (2019-05-29 18:28:16) 
-- CODE:
int("2.5")
print(semanal 50 litros de agua)

-- ERROR:
File "XXXX", line 2
    print(semanal 50 litros de agua)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:21) 
-- CODE:
int("2.5")
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int("2.5")
ValueError: invalid literal for int() with base 10: '2.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:33) 
-- CODE:
int(round(2.5))
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int("2.5")
ValueError: invalid literal for int() with base 10: '2.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:32:19) 
-- CODE:
int(round(2.5))
print()

-- EXECUTION TIME:
0.185665
-- TEST CASE 1:
---- input:
[5,30,5,10]
[20,35,15,20]
---- correct output:
71.25
---- user output:

-- TEST CASE 2:
---- input:
[5,30,5,7,52]
[20,35,15,10,60]
---- correct output:
220.75
---- user output:

-- TEST CASE 3:
---- input:
[2,60,10,30,20,10]
[10,70,20,35,21,10]
---- correct output:
299.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
